--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -15,9 +15,9 @@
 
     <h1>Shopping Cart</h1>
 
-    <span th:if="${products.size() == 0}">Cart is empty</span>
+    <span th:if="${items.size() == 0}">Cart is empty</span>
 
-    <table class="table table-hover" th:if="${products.size() > 0}">
+    <table class="table table-hover" th:if="${items.size() > 0}">
         <thead class="thead-dark">
         <tr>
             <td> Id </td>
@@ -28,13 +28,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.id}" />
-            <td th:text="${product.title}" />
-            <td th:text="${product.price}" />
+        <tr th:each="item : ${items}">
+            <td th:text="${item.product.id}" />
+            <td th:text="${item.product.title}" />
+            <td th:text="${item.product.price}" />
         </tr>
         </tbody>
     </table>
+    <a class="btn btn-success" th:href="@{/cart/create_order}">Make order</a>
 
 </div>
 </body>
