--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Application</title>
@@ -34,7 +34,7 @@
                 <td th:text="${product.price}" />
                 <td><a class="btn btn-info" th:href="@{'/details/' + ${product.id}}" />Details</a></td>
                 <td><a class="btn btn-success" th:href="@{'/cart/add/' + ${product.id}}" />Add To Cart</a></td>
-                <td><a class="btn btn-danger" th:href="@{'/products/delete/' + ${product.id}}" />Delete</a></td>
+                <td><a class="btn btn-danger" sec:authorize="hasRole('ADMIN')" th:href="@{'/products/delete/' + ${product.id}}" />Delete</a></td>
             </tr>
         </tbody>
     </table>
